# UA-Clarity-Tools

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml  run-tests.yml
ua_clarity_tools/: batch_artifact_update_template.xml  routing_template.xml  ua_clarity_tools.py
ua_clarity_tools/docs/: ua_clarity_tools.html
ua_clarity_tools/tests/: post_container_template.xml  post_project_template.xml  post_route_unroute_template.xml  step_creation_template.xml  test_ua_clarity_tools.py
